Fixed overlapping on tilt, and size adjustments

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -126,7 +126,7 @@ body {
 		0px 0px var(--dark);
 	background-size: cover;
 	background-position: center;
-	margin: 15px;
+	margin: 10px;
 	transform-style: preserve-3d;
 }
 
@@ -154,6 +154,10 @@ body {
 	transform-style: preserve-3d;
 	/*background-image: repeating-linear-gradient(45deg, #f9f9f9 0, rgba(0,0, 0,1) 0.1px, rgba(182, 158, 158, 0) 0, rgba(236, 25, 25, 0) 50%);*/
 
+}
+.siteCardWrapper:hover{
+	position: relative;
+	z-index: 20;
 }
 
 .siteContentContainer {
